--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -35,6 +35,7 @@
     "crypto": "^1.0.1",
     "drizzle-orm": "^0.29.1",
     "jose": "^5.1.3",
+    "stripe": "^14.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
