--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-icons": "^1.3.0",
     "@billing/api-routes": "workspace:*",
     "@billing/tailwind-config": "workspace:*",
     "@billing/ui": "workspace:*",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@tanstack/react-query": "^5.18.0",
     "@ts-rest/react-query": "^3.33.0",
     "@types/js-cookie": "^3.0.6",
     "@workos-inc/node": "^4.0.0",
