--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -33,6 +33,7 @@
     "@billing/logger": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.10",
     "drizzle-orm": "^0.29.1",
     "jose": "^5.1.3",
     "stripe": "^14.14.0",
