--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@ts-rest/react-query": "^3.33.0",
     "@types/js-cookie": "^3.0.6",
     "@workos-inc/node": "^4.0.0",
+    "dayjs": "^1.11.10",
     "jose": "^5.1.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
