--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.18.0",
+    "@ts-rest/core": "^3.33.0",
     "@ts-rest/react-query": "^3.33.0",
     "@types/js-cookie": "^3.0.6",
     "@workos-inc/node": "^4.0.0",
