--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@billing/tailwind-config": "workspace:*",
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -16,7 +18,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@billing/tailwind-config": "workspace:*",
     "@types/react": "^18.2.37",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
