--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,8 +9,9 @@
     "@billing/database": "workspace:*",
     "@billing/logger": "workspace:*",
     "drizzle-orm": "^0.29.1",
-    "hono": "^3.12.6",
-    "ts-rest-hono": "^0.5.0"
+    "hono": "^3.12.9",
+    "ts-rest-hono": "workspace:*",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@ts-rest/core": "^3.33.0",
