--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "esnext",
+    "module": "commonjs",
     "esModuleInterop": true,
     "strict": true,
     "jsx": "react-jsx",
