--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,19 +13,25 @@
     "@billing/tailwind-config": "workspace:*",
     "@billing/ui": "workspace:*",
     "@hookform/resolvers": "^3.3.2",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.18.0",
     "@ts-rest/core": "^3.33.0",
     "@ts-rest/react-query": "^3.33.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/mdx": "^2.0.11",
     "@vercel/speed-insights": "^1.0.10",
     "@workos-inc/node": "^4.0.0",
     "dayjs": "^1.11.10",
+    "gray-matter": "^4.0.3",
     "jose": "^5.1.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
