--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
