--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -33,5 +33,8 @@
     "tailwind.config.js",
     "src/env.mjs"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "mdx": {
+    "plugins": [["remark-frontmatter"]]
+  }
 }
